--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "amazon-cognito-identity-js": "^5.1.0",
     "aws-sdk": "^2.981.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.8.0"
   }
 }
