--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "aws-sdk": "^2.981.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
