--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "amazon-cognito-identity-js": "^5.1.0",
+    "aws-amplify": "^4.2.6",
     "aws-sdk": "^2.981.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
