--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "chart.js": "^3.5.1",
+    "moment": "^2.29.1",
     "nodemailer": "^6.6.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
