--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "amazon-cognito-identity-js": "^5.1.0",
+    "aws": "^0.0.3-2",
     "aws-amplify": "^4.2.7",
     "aws-sdk": "^2.983.0",
     "axios": "^0.21.1",
