--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "chart.js": "^3.5.1",
+    "cors": "^2.8.5",
     "moment": "^2.29.1",
     "nodemailer": "^6.6.3",
     "react": "^17.0.2",
